am refacut tema1

--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
             <a href="./index.html">WebStudio</a>
             <ul>
             <li><a href=#"Studio">Studio</a></li>
-            <li><a href=#"Portfolie">Portfolie</a></li>
+            <li><a href=#"Portfolio">Portfolio</a></li>
             <li><a href=#"Contacts">Contacts</a></li>
         </ul>
         </nav>
         <address>
         <ul>
-            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+110001111111">+11 (000) 1111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="+110001111111">+11 (000) 111-11-11-11</a></li>
         </ul>
         </address>
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Services</button>
+            <button type="button">Order Service</button>
         </section>
 
         <section>
             <h2>Title</h2>
             <ul>
             <li>
-                <h4>Strategy</h4>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                 </p>
             </li>
 
             <li>
-                <h4>Punctuality</h4>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
 
             <li>
-                <h4>Diligence</h4>
+                <h3>Diligence</h3>
                 <p>
                     Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                 </p>
             </li>
 
             <li>
-                <h4>Technologies</h4>
+                <h3>Technologies</h3>
                 <p>
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
@@ -64,7 +64,7 @@
         <ul>
             <li>
                 <img 
-                src="images/computer.svg"
+                src="images/img1.jpg"
                 alt="computer"
                 width="360px"
                 height="300px"/>
@@ -72,7 +72,7 @@
 
             <li>
                 <img
-                src="images/Smartphones.svg"
+                src="images/img2.jpg"
                 alt="Smarthphones"
                 width="360px"
                 height="300px"/>
@@ -80,7 +80,7 @@
             
             <li>
                 <img
-                src="images/Display.svg"
+                src="images/img3.jpg"
                 alt="Display-image"
                 width="360px"
                 height="300px"/>
@@ -93,46 +93,46 @@
         <ul>
             <li>
                 <img 
-                src="images/Mark.svg"
+                src="images/Mark.jpg"
                 alt="Product-designer"
-                weidth="264px"
+                width="264px"
                 height="260px"
                 />
-                <h4>Mark Guerrero</h4>
-                <h5>Product Designer</h5>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
             </li>
 
             <li>
                 <img
-                src="images/Tom.svg"
+                src="images/Tom.jpg"
                 alt="Fronted Developer"
-                weidth="264px"
+                width="264px"
                 height="260px"
                 />
-                <h4>Tom Ford</h4>
-                <h5>Frontend Developer</h5>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
             </li>
 
             <li>
                 <img
-                src="images/Camila.svg"
+                src="images/Camila.jpg"
                 alt="Marketing"
-                weidth="264px"
+                width="264px"
                 height="260px"
                 />
-                <h4>Camila Garcia</h4>
-                <h5>Marketing</h5>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
             </li>
 
             <li>
                 <img
-                src="images/Daniel.svg"
+                src="images/Daniel.jpg"
                 alt="UI Designer"
-                weidth="264px"
+                width="264px"
                 height="260px"
                 />
-                <h4>Daniel Wilson</h4>
-                <h5>UI Designer</h5>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
             </li>
         </ul>
         </section>
