am refacut tema11

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <address>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+110001111111">+11 (000) 111-11-11-11</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11-11</a></li>
         </ul>
         </address>
     </header>
@@ -64,25 +64,25 @@
         <ul>
             <li>
                 <img 
-                src="images/img1.jpg"
+                src="./images/img1.jpg"
                 alt="computer"
-                width="360px"
+                width="360"
                 height="300px"/>
             </li>
 
             <li>
                 <img
-                src="images/img2.jpg"
+                src="./images/img2.jpg"
                 alt="Smarthphones"
-                width="360px"
+                width="360"
                 height="300px"/>
             </li>
             
             <li>
                 <img
-                src="images/img3.jpg"
+                src="./images/img3.jpg"
                 alt="Display-image"
-                width="360px"
+                width="360"
                 height="300px"/>
             </li>
         </ul>
@@ -93,9 +93,9 @@
         <ul>
             <li>
                 <img 
-                src="images/Mark.jpg"
+                src="./images/Mark.jpg"
                 alt="Product-designer"
-                width="264px"
+                width="264"
                 height="260px"
                 />
                 <h3>Mark Guerrero</h3>
@@ -104,9 +104,9 @@
 
             <li>
                 <img
-                src="images/Tom.jpg"
+                src="./images/Tom.jpg"
                 alt="Fronted Developer"
-                width="264px"
+                width="264"
                 height="260px"
                 />
                 <h3>Tom Ford</h3>
@@ -115,7 +115,7 @@
 
             <li>
                 <img
-                src="images/Camila.jpg"
+                src="./images/Camila.jpg"
                 alt="Marketing"
                 width="264px"
                 height="260px"
@@ -126,7 +126,7 @@
 
             <li>
                 <img
-                src="images/Daniel.jpg"
+                src="./images/Daniel.jpg"
                 alt="UI Designer"
                 width="264px"
                 height="260px"
