--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 src="./images/img1.jpg"
                 alt="computer"
                 width="360"
-                height="300px"/>
+                height="300"/>
             </li>
 
             <li>
@@ -75,7 +75,7 @@
                 src="./images/img2.jpg"
                 alt="Smarthphones"
                 width="360"
-                height="300px"/>
+                height="300"/>
             </li>
             
             <li>
@@ -83,7 +83,7 @@
                 src="./images/img3.jpg"
                 alt="Display-image"
                 width="360"
-                height="300px"/>
+                height="300"/>
             </li>
         </ul>
         </section>
@@ -96,7 +96,7 @@
                 src="./images/Mark.jpg"
                 alt="Product-designer"
                 width="264"
-                height="260px"
+                height="260"
                 />
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
@@ -105,9 +105,9 @@
             <li>
                 <img
                 src="./images/Tom.jpg"
-                alt="Fronted Developer"
+                alt="Fronted-Developer"
                 width="264"
-                height="260px"
+                height="260"
                 />
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
@@ -117,8 +117,8 @@
                 <img
                 src="./images/Camila.jpg"
                 alt="Marketing"
-                width="264px"
-                height="260px"
+                width="264"
+                height="260"
                 />
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
@@ -127,9 +127,9 @@
             <li>
                 <img
                 src="./images/Daniel.jpg"
-                alt="UI Designer"
-                width="264px"
-                height="260px"
+                alt="UI-Designer"
+                width="264"
+                height="260"
                 />
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
