--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </section>
 
         <section>
-            <h2>What are you doing</h2>
+            <h2>What are we doing</h2>
         <ul>
             <li>
                 <img 
@@ -89,7 +89,7 @@
         </section>
 
         <section>
-            <h2>Our team</h2>
+            <h2>Our Team</h2>
         <ul>
             <li>
                 <img 
